// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`board tests correctly generate patches for boards and blocks should add fields on update and remove it in the undo 1`] = `
[
  {
    "blockIDs": [
      "test-old-block-id",
    ],
    "blockPatches": [
      {
        "deletedFields": [],
        "updatedFields": {
          "newField": "new field",
        },
      },
    ],
    "boardIDs": [
      "test-board-id",
    ],
    "boardPatches": [
      {
        "deletedCardProperties": [],
        "deletedProperties": [],
        "updatedCardProperties": [],
        "updatedProperties": {},
      },
    ],
  },
  {
    "blockIDs": [
      "test-old-block-id",
    ],
    "blockPatches": [
      {
        "deletedFields": [
          "newField",
        ],
        "updatedFields": {},
      },
    ],
    "boardIDs": [
      "test-board-id",
    ],
    "boardPatches": [
      {
        "deletedCardProperties": [],
        "deletedProperties": [],
        "updatedCardProperties": [],
        "updatedProperties": {},
      },
    ],
  },
]
`;

exports[`board tests correctly generate patches for boards and blocks should generate two empty patches for the same board and block 1`] = `
[
  {
    "blockIDs": [
      "test-card-id",
    ],
    "blockPatches": [
      {
        "deletedFields": [],
        "updatedFields": {},
      },
    ],
    "boardIDs": [
      "test-board-id",
    ],
    "boardPatches": [
      {
        "deletedCardProperties": [],
        "deletedProperties": [],
        "updatedCardProperties": [],
        "updatedProperties": {},
      },
    ],
  },
  {
    "blockIDs": [
      "test-card-id",
    ],
    "blockPatches": [
      {
        "deletedFields": [],
        "updatedFields": {},
      },
    ],
    "boardIDs": [
      "test-board-id",
    ],
    "boardPatches": [
      {
        "deletedCardProperties": [],
        "deletedProperties": [],
        "updatedCardProperties": [],
        "updatedProperties": {},
      },
    ],
  },
]
`;

exports[`board tests correctly generate patches from two boards should add card properties on the redo and remove them on the undo 1`] = `
[
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [
      {
        "id": "[id]",
        "index": 0,
        "name": "Status",
        "options": [],
        "type": "select",
      },
      {
        "id": "property1",
        "index": 1,
        "name": "Property 1",
        "options": [
          {
            "color": "propColorBrown",
            "id": "value1",
            "value": "value 1",
          },
        ],
        "type": "select",
      },
      {
        "id": "property2",
        "index": 2,
        "name": "Property 2",
        "options": [
          {
            "color": "propColorBrown",
            "id": "value1",
            "value": "value 1",
          },
        ],
        "type": "select",
      },
      {
        "id": "property3",
        "index": 3,
        "name": "Property 3",
        "options": [
          {
            "color": "propColorBrown",
            "id": "value1",
            "value": "value 1",
          },
        ],
        "type": "select",
      },
      {
        "id": "new-property-id",
        "index": 4,
        "name": "property-name",
        "options": [
          {
            "color": "propColorYellow",
            "id": "opt",
            "value": "val",
          },
        ],
        "type": "select",
      },
    ],
    "updatedProperties": {},
  },
  {
    "deletedCardProperties": [
      "new-property-id",
    ],
    "deletedProperties": [],
    "updatedCardProperties": [
      {
        "id": "[id]",
        "index": 0,
        "name": "Status",
        "options": [],
        "orgScoped": undefined,
        "required": undefined,
        "type": "select",
      },
      {
        "id": "property1",
        "index": 1,
        "name": "Property 1",
        "options": [
          {
            "color": "propColorBrown",
            "id": "value1",
            "value": "value 1",
          },
        ],
        "orgScoped": undefined,
        "required": undefined,
        "type": "select",
      },
      {
        "id": "property2",
        "index": 2,
        "name": "Property 2",
        "options": [
          {
            "color": "propColorBrown",
            "id": "value1",
            "value": "value 1",
          },
        ],
        "orgScoped": undefined,
        "required": undefined,
        "type": "select",
      },
      {
        "id": "property3",
        "index": 3,
        "name": "Property 3",
        "options": [
          {
            "color": "propColorBrown",
            "id": "value1",
            "value": "value 1",
          },
        ],
        "orgScoped": undefined,
        "required": undefined,
        "type": "select",
      },
    ],
    "updatedProperties": {},
  },
]
`;

exports[`board tests correctly generate patches from two boards should add card properties on the redo and undo if they exists in both, but differ 1`] = `
[
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [
      {
        "id": "new-property-id",
        "name": "property-name",
        "options": [
          {
            "color": "propColorYellow",
            "id": "opt",
            "value": "val",
          },
        ],
        "type": "select",
      },
    ],
    "updatedProperties": {},
  },
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [
      {
        "id": "new-property-id",
        "name": "a-different-name",
        "options": [
          {
            "color": "propColorYellow",
            "id": "opt",
            "value": "val",
          },
        ],
        "type": "select",
      },
    ],
    "updatedProperties": {},
  },
]
`;

exports[`board tests correctly generate patches from two boards should add card properties on the redo and undo if they exists in both, but their options are different 1`] = `
[
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [
      {
        "id": "new-property-id",
        "name": "property-name",
        "options": [
          {
            "color": "propColorYellow",
            "id": "opt",
            "value": "val",
          },
        ],
        "type": "select",
      },
    ],
    "updatedProperties": {},
  },
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [
      {
        "id": "new-property-id",
        "name": "property-name",
        "options": [
          {
            "color": "propColorBrown",
            "id": "another-opt",
            "value": "val",
          },
        ],
        "type": "select",
      },
    ],
    "updatedProperties": {},
  },
]
`;

exports[`board tests correctly generate patches from two boards should add properties on the update patch and remove them on the undo 1`] = `
[
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [],
    "updatedProperties": {
      "prop1": "val1",
    },
  },
  {
    "deletedCardProperties": [],
    "deletedProperties": [
      "prop1",
    ],
    "updatedCardProperties": [],
    "updatedProperties": {},
  },
]
`;

exports[`board tests correctly generate patches from two boards should generate two empty patches for the same board 1`] = `
[
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [],
    "updatedProperties": {},
  },
  {
    "deletedCardProperties": [],
    "deletedProperties": [],
    "updatedCardProperties": [],
    "updatedProperties": {},
  },
]
`;
